d1d64f0 (HEAD, origin/master, master) fix: reset @jekyll_config after reading location of configuration file.
4822f67 (tag: v0.1.2) Update CHANGELOG, bump VERSION.
6eed295 fix: left binding.pry in the code :((
5cd3348 (tag: v0.1.1) Update CHANGELOG, bump VERSION.
263acca fix: use thor actions to inject redirect_from into post.
61a16b8 new: Add options to redirect to specify the permalink template and force overwriting.
dbb8b67 (tag: v0.1.0) new: Add CHANGELOG.
78c8b1c new: Add :redirect command to insert a 'redirect_from:' array in the front matter of each post in the _posts directory, to allow for blog restructuring, in service of using the jekyll-redirect-from gem.
4957944 (tag: v0.0.3) Forgot to add thor as a dependency! Doh!
a905e0e Move setup action to beginning of Usage section in README
2ba98e4 (tag: v0.0.2) version bump
2fee61c clean up tests, all running under one test_site
df41340 add usage examples to README
9ce0103 (tag: v0.0.1) Move source_path into with_config
944f3cd setup, new_post, new_page actions
eed0fcd Initial Commit