@@ -1,3 +1,3 @@
 module Jekyllpress
-  VERSION = "1.1.0"
+  VERSION = "1.2.0"
 end
